fix spacing

--- a/shehacks_project/css/styles.css
+++ b/shehacks_project/css/styles.css
@@ -357,6 +357,6 @@ position: absolute;
 width: 579px;
 height: 31px;
 left: 340px;
-top: 400px;
+top: 350px;
 
 }
